--- a/src/a4_task2_sydney_rilum.Rmd
+++ b/src/a4_task2_sydney_rilum.Rmd
@@ -19,15 +19,12 @@ library(broom)
 
 ## Introduction
 
-A 4 - 5 sentence "mini-introduction" to what this study is exploring, including basic background information about the subject, site and study (with citations as needed), and a brief overview of what is included in the exploratory report. 
-
-This report provides an exploratory overview of juvenile snowshoe hare counts data from Bonanza Creek Experimental Forest, Alaska across three different sampling sites from 1998-2012 (Kielland et al. 2017). Specifically, juvenile hare weights are compared by sex and sampling site through descriptive statistics and data visualizations. In addition, the relationship between juvenile weight and hind foot length is explored.
+This report provides an exploratory overview of juvenile snowshoe hare counts data from the Bonanza Creek Experimental Forest in Alaska, across three different sampling sites from 1998-2012 (Kielland et al. 2017). Snowshoe hares, *Lepus americanus*, are a keystone prey species in northern Alaska boreal forests and typically experience fluctuations in population densities every 8-11 years, potentially due to changes in vegetation and predators (Kielland et al. 2017). This data set specifically focuses on vegetation impact, recording physical snowshoe hare observations from capture-recapture methods at sampling sites with differing vegetation type. The main focus of this report is to use the open source data set to compare juvenile hare weights by sex and sampling site through descriptive statistics and data visualizations. In addition, the relationship between juvenile weight and hind foot length is explored.
 
 
 ## Data and Analyses
 
-Snowshoe hare physical measurements were collected and made available by Kielland et al. at the Bonanza Creek Long Term Ecological Research Site in Alaska (Kielland et al. 2017). The data contains observations for 3,197 recorded hare trappings, collected across three sample sites ("Bonanza Black Spruce", "Bonanza Mature", and "Bonanza Riparian") differing in habitat and vegetation type, from the years 1998 to 2012. The following exploratory data visualization includes comparison of juvenile hare weights by sex and site through descriptive statistics, exploratory plots, a two-sample t-test using a significance level (α) of 0.05, and analysis of effect size by Cohen's d. The relationship between juvenile weight and hind foot length is explored by simple linear regression. All analyses are in R version 4.0.2 using RStudio version 1.3.1093
-
+Snowshoe hare physical measurements were collected and made available by Kielland et al. at the Bonanza Creek Long Term Ecological Research Site in Alaska (Kielland et al. 2017). The data contains observations for 3,197 recorded hare trappings, collected across three sample sites ("Bonanza Black Spruce", "Bonanza Mature", and "Bonanza Riparian") differing in habitat and vegetation type, from the years 1998 to 2012. The following exploratory data visualization includes comparison of juvenile hare weights by sex and site through descriptive statistics, exploratory plots, a two-sample t-test using a significance level (α) of 0.05, and analysis of effect size by Cohen's d. The relationship between juvenile weight and hind foot length is explored by simple linear regression. All analyses are in R version 4.0.2 using RStudio version 1.3.1093.
 
 ```{r}
 # Read in the data
@@ -38,8 +35,6 @@ bonanza <- read.csv(here("data", "bonanza_hares.csv"))
 
 ### A. Annual juvenile hare trap counts
 
-The total number of juvenile hare trappings during each year of the study were calculated in order to visualize the number of observations within the data set.
-
 ```{r}
 # Create a subset of data that filters for juvenile hares and counts by year
 ann_juvenile_counts <- bonanza %>% 
@@ -48,7 +43,7 @@ ann_juvenile_counts <- bonanza %>%
   filter(age == "j") %>% 
   count(year)
 
-# Calculate mean annual number of juvenile hares trapped
+# Calculate mean annual number of juvenile hares trapped for reference in analysis
 mean_juvenile_traps <- ann_juvenile_counts %>% 
   summarize(mean = mean(n))
 
@@ -63,17 +58,15 @@ ggplot(data = ann_juvenile_counts, aes(x = year, y = n)) +
   theme(legend.position = "none")
 ```
 
-**Figure 1.** Annual number of juvenile snowshoe hare trappings per year from 1999 to 2012. Note there are no juvenile hare traps recorded in 2002 and 2009. Data: Kielland et al. (2017).
+**Figure 1.** Annual number of juvenile snowshoe hare trappings per year from 1999 to 2012 (including data from all sampling sites). Note there are no juvenile hare traps recorded in 2002 and 2009 (trapping was conducted, however age was not a recorded variable for those years in the study). Data: Kielland et al. (2017).
 
-As displayed in the bar graph, the maximum count of juvenile hare trappings was recorded in 1999 with 126 hare traps. The years 2004, 2007, 2010, and 2012 had the smallest number of juvenile hare trappings, with 8, 5, 2, and 6 hare traps respectively. In addition, the mean annual number of juvenile hare trappings was 31.5. Snowshoe hare densities appear to be highest in 1999 and  declining since. This is not atypical for snowshoe hares as they usually experience population fluctuations of 8-11 years (Kielland et al. 2017). It is important to note that these yearly counts can be impacted by effort. Thus, in order to standardize the juvenile hare population in future analyses, I would suggest that there is a consistent number of traps set for the same number of days each year in the study.  
+The total number of juvenile hare trappings during each year of the study were calculated in order to visualize the number of observations within the data set. The maximum annual count of juvenile hare trappings was recorded in 1999 with `r ann_juvenile_counts[1,2]` hare traps (Figure 1). The years 2004, 2007, and 2012 had very few juvenile hare trapping counts, with `r ann_juvenile_counts[5,2]`, `r ann_juvenile_counts[8,2]`, and `r ann_juvenile_counts[12,2]` hare traps respectively. However, the year 2010 had the fewest, or minimum, count of juvenile hare trappings with `r ann_juvenile_counts[10,2]` total. In addition, the mean annual number of juvenile hare trappings was `r mean_juvenile_traps[1]`. Snowshoe hare densities appear to be highest in 1999, declining thereafter. This is not atypical for snowshoe hares as they usually experience population fluctuations of 8-11 years (Kielland et al. 2017). It is important to note that these yearly counts can be impacted by effort. Therefore, in order to standardize the juvenile hare population in future analyses, I would suggest that if there cannot be a consistent number of traps set for the same number of days each year in the study, then the trap count should be divided by the amount of time spent trapping or unit of trapping effort.
 
 
 ### B. Visualize juvenile hare weights
 
-Various data visualizations were created to compare juvenile hare weights by both sex and site, as well as by sex and site separately. When comparing juvenile hare weights by both site and sex in Figure 2, male hares have larger median weights than female hares across all three sampling sites. When hare weights are compared by sex alone in Figure 3, male hares are on average heavier than female hares, with means of 945.86 g and 855.39 g, respectively. Lastly, when sites alone are used to compare hare weights in Figure 4, the Bonanza Black Spruce site had the heaviest juvenile hares, with a mean weight of 1036.17 g. Juvenile hares at the Bonanza Mature and Bonanza Riparian sites had similar smaller mean weights of 878.05 g and 862.59 g, respectively.
-
 ```{r}
-# Create a subset of data that filters for juvenile hares and renames sites
+# Create a subset of data that filters for juvenile hares and renames sampling sites
 hare_weights <- bonanza %>% 
   filter(age == "j") %>% 
   select(weight, sex, grid) %>% 
@@ -82,25 +75,30 @@ hare_weights <- bonanza %>%
     grid == "bonmat" ~ "Bonanza Mature",
     grid == "bonrip" ~ "Bonanza Riparian"))
 
-# Juvenile Hare Weights by Sex and Site
-ggplot() +
-  geom_beeswarm(data = hare_weights, 
-                aes(x = sex, y = weight, color = grid),
-                size = 2,
-                alpha = 0.5) +
-  geom_boxplot(data = hare_weights,
-               aes(x = sex, y = weight),
-               alpha = 0) +
-  labs(x = "Sex", 
+# Create a graph to compare juvenile hare weights by sex and site
+ggplot(data = hare_weights, 
+       aes(x = sex, y = weight)) +
+  geom_beeswarm(aes(color = grid,
+                    alpha = 0.5)) +
+  scale_color_manual(values = c("royalblue3","cyan4", "coral2")) +
+  geom_boxplot(fill = NA, 
+               width = 0.5, 
+               outlier.color = NA) +
+  facet_wrap(~grid) +
+  stat_summary(fun=mean, 
+               geom="point", 
+               shape=20, 
+               size=3, 
+               color="black", 
+               fill="black") +
+  theme_light() +
+  labs(x = "Sex",
        y = "Weight (g)",
        title = "Juvenile Hare Weights by Sex and Site") +
-  facet_wrap(~grid) +
-  scale_color_manual(values = c("cornflowerblue","cyan4", "coral2")) +
-  theme_light() +
   theme(legend.position = "none")
 ```
 
-**Figure 2.** Juvenile snowshoe hare weights (g) compared by sex for each of the three sampling sites. A boxplot is overlaid on the beeswarm plot to display the distributions of each subset of data, including the median (bold vertical line) and 25^th^ and 75^th^ percentile values (box endpoints) for each subset. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
+**Figure 2.** Juvenile snowshoe hare weights (g) compared by sex for each of the three sampling sites. A boxplot is overlaid on the beeswarm plot to display the distributions of each subset of data, including the mean (black point), median (bold vertical line) and 25^th^ and 75^th^ percentile values (box endpoints) for each subset. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
 
 
 ```{r}
@@ -109,7 +107,7 @@ hare_mean_weight_sex <- hare_weights %>%
   group_by(sex) %>% 
   summarize(mean_weight = mean(weight, na.rm = TRUE))
 
-# Juvenile Hare Weights by Sex
+# Create a graph to compare juvenile hare weights by sex only
 ggplot() +
   geom_beeswarm(data = hare_weights, 
                 aes(x = sex, y = weight, color = sex),
@@ -123,6 +121,7 @@ ggplot() +
              aes(x = sex, y = mean_weight),
              size = 3,
              color = "black") +
+  scale_color_manual(values = c("palevioletred1","skyblue2"), na.value = "snow4") +
   labs(x = "Sex", 
        y = "Weight (g)",
        title = "Juvenile Hare Weights by Sex") +
@@ -130,7 +129,7 @@ ggplot() +
   theme(legend.position = "none")
 ```
 
-**Figure 3.** Juvenile snowshoe hare weights (g) compared by sex. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
+**Figure 3.** Juvenile snowshoe hare weights (g) compared by sex alone. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
 
 
 ```{r}
@@ -139,7 +138,7 @@ hare_mean_weight_site <- hare_weights %>%
   group_by(grid) %>% 
   summarize(mean_weight = mean(weight, na.rm = TRUE))
 
-# Juvenile Hare Weights by Site
+# Create a graph to compare juvenile hare weights by site only
 ggplot() +
   geom_beeswarm(data = hare_weights, 
                 aes(x = grid, y = weight, color = grid),
@@ -153,6 +152,7 @@ ggplot() +
              aes(x = grid, y = mean_weight),
              size = 3,
              color = "black") +
+  scale_color_manual(values = c("royalblue3","cyan4", "coral2")) +
   labs(x = "Site", 
        y = "Weight (g)",
        title = "Juvenile Hare Weights by Site") +
@@ -163,7 +163,10 @@ ggplot() +
 **Figure 4.** Juvenile snowshoe hare weights (g) compared by sampling site. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. Data: Kielland et al. (2017).
 
 
-### C. Juvenile weight comparison (male & female snowshoe hares)
+Various data visualizations were created to compare juvenile hare weights by both sex and site, as well as by sex and site separately. When comparing juvenile hare weights by both site and sex in Figure 2, male hares have larger mean and median weights than female hares across all three sampling sites. This is consistent when hare weights are compared by sex alone in Figure 3, as male hares are on average heavier than female hares (with means of `r round(hare_mean_weight_sex[2,2],2)` g and `r round(hare_mean_weight_sex[1,2],2)` g, respectively). Lastly, when sampling sites alone are used to compare hare weights in Figure 4, the Bonanza Black Spruce site was shown to have the heaviest juvenile hares, with a mean weight of `r round(hare_mean_weight_site[1,2],2)` g. Juvenile hares at the Bonanza Mature and Bonanza Riparian sites had smaller and similar mean weights of `r round(hare_mean_weight_site[2,2],2)` g and `r round(hare_mean_weight_site[3,2],2)` g, respectively (Figure 4). It is important to note that the Bonanza Riparian site had a larger amount of observations than the other two sites, as well as a greater range of juvenile hare weights (represented by the vertical "whisker" lines in Figure 4).
+
+
+### C. Juvenile weight comparison between male & female snowshoe hares
 
 ```{r}
 # Descriptive statistics data subset
@@ -179,7 +182,7 @@ hare_weight_stats <- bonanza %>%
             sample_size = n())
 ```
 
-**Table 1.** Descriptive statistics (mean, standard deviation, and sample size) for male and female juvenile snowshoe hares. Data: Kielland et al. (2017).
+**Table 1.** Descriptive statistics (mean, standard deviation, and sample size) for male and female juvenile snowshoe hares. Statistics for the "NA" group are also presented for consideration. Data: Kielland et al. (2017).
 
 ```{r}
 # Descriptive statistics table
@@ -190,9 +193,9 @@ hare_weight_stats %>%
 
  
 ```{r, include = FALSE}
-# T-test code: 
+## T-test preparation code: 
 
-# Create vectors of weight for female and male juvenile hares separately.
+# Create vectors of weight for female and male juvenile hares separately
 hare_f <- hare_weights %>% 
   filter(sex == "f") %>% 
   pull(weight)
@@ -204,28 +207,28 @@ hare_m <- hare_weights %>%
 # Plot histograms & qq-plots to check assumptions
 hist(hare_f) # Looks normal
 qqnorm(hare_f) # Looks very linear
-hist(hare_m) # Possibly a bit negatively skewed
+hist(hare_m) # Looks normal, possibly a bit negatively skewed
 qqnorm(hare_m) # Looks relatively linear
 
-# Overall: assumptions of normality hold, & sample size additionally >> Central Limit Theorem (means will be normally distributed). Two-sample t-test OK for means comparison! 
+# Assumptions of normality hold, & sample size additionally > Central Limit Theorem (means will be normally distributed). Therefore, it is okay to use a two-sample t-test for means comparison! 
 
 
 ## T-test: Is there a significant difference in weight between male and female juvenile hares?
 
-# Run the t-test:
+# Run the t-test
 hare_ttest <- t.test(hare_f, hare_m)
 hare_ttest
 
-# Get the tidy model results to call outputs in-line: 
+# Get the tidy model results to call outputs in-line
 hare_ttest_tidy <- tidy(hare_ttest)
 
-# Get the means & SDs for each: 
+# Get the means & SDs for each, removing NA values
 male_mean <- mean(hare_m)
 female_mean <- mean(hare_f, na.rm = TRUE)
 male_sd <- sd(hare_m)
 female_sd <- sd(hare_f, na.rm = TRUE)
 
-# Get the effect size: 
+# Get the effect size
 hare_effsize <- cohen.d(hare_f, hare_m, na.rm = TRUE)
 hare_effsize
 
@@ -237,6 +240,7 @@ On average, juvenile male hares have larger mean weights than juvenile female ha
 ### D. Relationship between juvenile weight & hind foot length
 
 ```{r, include = FALSE}
+# Create a subset of data that filters for juveniles and only includes weight and hind foot length
 juvenile_foot_weight <- bonanza %>% 
   filter(age == "j") %>% 
   select(weight, hindft)
@@ -244,7 +248,7 @@ juvenile_foot_weight <- bonanza %>%
 # Linear regression/model:
 hare_lm <- lm(weight ~ hindft, data = juvenile_foot_weight)
 
-# Get tidy versions of the model output to call later on in text
+# Get tidy versions of the model output to reference later in text
 hare_lm_tidy <- tidy(hare_lm)
 hare_lm_glance <- glance(hare_lm)
 
@@ -254,52 +258,49 @@ plot(hare_lm)
 # Get Pearson's r correlation
 hare_cor <- cor.test(juvenile_foot_weight$weight, juvenile_foot_weight$hindft)
 
-# Tidy version of correlation output:
+# Tidy version of correlation output to reference later in text
 hare_cor_tidy <- tidy(hare_cor)
-
-summary(hare_lm)
-hare_cor
 
 ```
 
 
 ```{r}
-# Juvenile hare hind foot length versus weight
-ggplot(data = juvenile_foot_weight, aes(x = weight, y = hindft)) +
+# Create a graph to determine potential relationship between juvenile hare hind foot length and weight, with a regression line
+ggplot(data = juvenile_foot_weight, aes(y = weight, x = hindft)) +
   geom_point(color = "cyan4") +
-  labs(x = "Weight (g)", 
-       y = "Hind foot length (mm)",
-       title = "Juvenile hare hind foot length vs. weight") +
+  labs(y = "Weight (g)", 
+       x = "Hind foot length (mm)",
+       title = "Juvenile Hare Hind Foot Length vs. Weight") +
   theme_light() +
   theme(legend.position = "none") +
   geom_smooth(method = "lm",
               color = "black",
               size = 0.5,
               fill = "gray10",
-              alpha = 0.5) +
-  ggpubr::stat_regline_equation(label.x = 1250, label.y = 93)
+              alpha = 0.5, 
+              se = FALSE) +
+  ggpubr::stat_regline_equation(label.x = 70, label.y = 1300)
 ```
 
-**Figure 5.** Relationship between flipper length (mm) and body mass (g) for the three penguin species. Points indicate individual penguin measurements (Adélie = gold circles; chinstrap = teal triangles; gentoo = coral diamonds). Linear model summary: $\beta$~1~ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^, p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,2)`, Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`). Data: Kielland et al. (2017).
+**Figure 5.** Relationship between juvenile hare hind foot length (mm) and weight (g). Points indicate individual observations of all juvenile hares trapped in the study. Linear model summary: $\beta$~1~ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^, p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,3)`, Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`). Data: Kielland et al. (2017).
 
-In 2 - 3 sentences below your figure, describe the outcome of your linear regression exploration (e.g. slope interpretation, R2 value, and Pearson's r correlation) and touch briefly on which assumption(s) of linear regression may be a concern, and additional thoughts you have about how well (or not well…) the linear model describes the relationship. What worries you? 
 
-The relationship between juvenile hare weight and hind foot length appears relatively linear (Figure 5). Simple linear regression revealed that hare weight significantly predicts hind foot length (p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,2)`) with an average slope of $\beta$ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^. This means that for each one millimeter increase in hind foot length we expect an average increase in hare weight of `r round(hare_lm_tidy$estimate[2], 2)` g). The Multiple R^2^ value is 0.2988, meaning that 29.9% or ~30% of variance in hind foot length is explained by weight.
-
-From the Pearson's r correlation test, hind foot length and weight were found to be moderately, and significantly, positively correlated (Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`, p < 0.001). Diagnostic plots (not included in this report) reveal relatively normally distributed and homoscedastic residuals. 
+The relationship between juvenile hare hind foot length and weight appears relatively linear (Figure 5). Simple linear regression revealed that hare weight moderately predicts hind foot length (p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,2)`) with an average slope of $\beta$ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^, meaning that for every one millimeter increase in hind foot length we expect an average increase in hare weight of `r round(hare_lm_tidy$estimate[2], 2)` g). The Multiple R^2^ value is `r round(hare_lm_glance$r.squared,3)`, meaning that ~30% of variance in weight is explained by hind foot length The limitations of this linear model should be noted; since the y intercept of the regression line is -280, this would mean we should expect a juvenile hare with a 0 mm hind foot length to have an average weight of -280 g. This values in this statement do not physically make sense, and therefore the linear regression is only valid for values of hind foot length and weight that juvenile hares are capable of having. As a result, the assumption of linearity cannot be completely accepted. From the Pearson's r correlation test, hind foot length and weight were found to be moderately, and significantly, positively correlated (Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`, p < 0.001). Diagnostic plots (not included in this report) reveal relatively normally distributed and homoscedastic residuals, satisfying these assumptions for linear regression. 
 
 
 ## Summary
 
 Exploratory juvenile hares data analysis reveals the following findings:
 
-- Male juvenile hares are the largest of the three species in both mean flipper length and body mass
-- Male gentoo penguins longer mean flipper length than female gentoos (the difference is significant, and the effect size is large)
-- Flipper length appears linearly related with body mass across all three penguin species; the relationship (by simple linear regression) is significant, with a slope (expected average increase in body mass with a 1 mm increase in flipper length) of 49.69 g mm-1.
+- Annual snowshoe juvenile hare trap counts reveal that hare densities were highest in 1999, with a relatively declining population trend since.
+- Male juvenile hares have larger mean weights than female juvenile hares (the difference is significant, and the effect size is small).
+- Juvenile hares at the Bonanza Black Spruce site have larger mean and median weights than at the Bonanza Mature and Bonanza Riparian sites.
+- Hind foot length appears moderately linearly related with weight for juvenile hares; the relationship (by simple linear regression) is significant, with a slope of `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^ (which is the expected average increase in weight with a 1 mm increase in hind foot length).
 
 Next steps:
 
-- Explore the impacts of sex and site when comparing the relationship between weight and hind foot length.
+- Explore the impacts of sex and site variables when comparing the relationship between weight and hind foot length.
+- Account for the impact of effort on count numbers per year by standardizing counts by unit effort.
 
 
 ## Citations
